--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,7 +1,13 @@
+<ActionBar title="Angular2">
+</ActionBar>
 <StackLayout>
     <Label text="Tap the button" class="title"></Label>
     
     <Button text="TAP" (tap)="onTap()"></Button>
 
     <Label [text]="message" class="message" textWrap="true"></Label>
+		
+		<ActivityIndicator [busy]="isLoading" [visibility]="isLoading ? 'visible' : 'collapse'" row="1" horizontalAlignment="center" verticalAlignment="center"></ActivityIndicator>
+		
+		<Button text="Show Alert" (tap)="showAlert()"></Button>
 </StackLayout>
